docker/kubernetes/service.yaml
# ---
# apiVersion: "v1"
# kind: "Service"
# metadata:
#   name: "api-sga-service"
#   namespace: "default"
#   labels:
#     app: "api-sga"
# spec:
#   ports:
#   - name: http
#     protocol: "TCP"
#     port: 80
#     targetPort: 80
#   - name: https
#     protocol: TCP
#     port: 443
#   selector:
#     app: "api-sga"
#   type: "LoadBalancer"
#   loadBalancerIP: "35.185.96.219"
#   #34.138.212.145
---
apiVersion: v1
kind: Service
metadata:
  name: api-sga-service
  namespace: default
  annotations:
    cloud.google.com/app-protocols: '{"api-sga-https-port":"HTTPS","api-sga-http-port":"HTTP"}'
spec:
  ports:
  - name: api-sga-http-port
    protocol: "TCP"
    port: 80
    targetPort: 80
  - name: api-sga-https-port
    protocol: TCP
    port: 443
  selector:
    app: api-sga
  type: NodePort
